--- a/bitacora.html
+++ b/bitacora.html
@@ -307,7 +307,7 @@
 <body>
     <header>
         <h1>Bitácora de Trading Deriv</h1>
-        <a href="index (2).html" class="header-link">Ir a la gestión</a>
+        <a href="index.html" class="header-link">Ir a la gestión</a>
     </header>
     
     <div class="container">
